--- a/src/components/reviewImage/reviewImageCreator.module.css
+++ b/src/components/reviewImage/reviewImageCreator.module.css
@@ -1,5 +1,5 @@
 .camera {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     position: absolute;
     z-index: 101;
     top: 0;
@@ -10,11 +10,32 @@
 }
 
 .openCamera {
+    display: flex;
+}
+
+.captureImage {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.captureImage video {
+    width: 100vw;
+    ;
+    max-height: 100vh;
+    ;
+    /* aspect-ratio: 1 / 1; */
+    /* border: 2px solid blue; */
+}
+
+.openCamera {
     display: block;
 }
 
 .camera video {
-    width: 100vw;;
+    width: 100vw;
+    
     max-height: 100vh;
 }
 
@@ -28,20 +49,34 @@
     z-index: 102;
     display: none;
 }
+
 .confirmingOutput.show {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .confirmingOutput img {
     height: auto;
-    max-width: 100%;
+    /* max-width: 100%; */
     max-height: 100vh;
-    border: 4px solid green;
-    aspect-ratio: var(--photoAspectRation);
- 
+    /* border: 4px solid green; */
+    /* aspect-ratio: var(--photoAspectRation); */
+
 }
- .optionButtons {
+
+.previewCanvas {
+    /* border: 2px solid red; */
+    position: absolute;
+    top: 0%;
+    /* transform: translateY(-50%); */
+    /* height: 100%; */
+    /* height: 766px; */
+    /* width: 766px; */
+    /* height: 400px;; */
+    /* width: 400px; */
+}
+.optionButtons {
     position: absolute;
     left: 50%;
     bottom: 30px;
@@ -60,6 +95,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .output img {
     width: 100%;
 }
