--- a/src/components/reviewImage/reviewImageCreator.module.css
+++ b/src/components/reviewImage/reviewImageCreator.module.css
@@ -1,5 +1,4 @@
 .camera {
-    /* border: 1px solid red; */
     position: absolute;
     z-index: 101;
     top: 0;
@@ -10,7 +9,12 @@
 }
 
 .openCamera {
-    display: flex;
+    display: block;
+}
+
+.camera video {
+    width: 100vw;
+    max-height: 100vh;
 }
 
 .captureImage {
@@ -18,25 +22,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.captureImage video {
-    width: 100vw;
-    ;
-    max-height: 100vh;
-    ;
-    /* aspect-ratio: 1 / 1; */
-    /* border: 2px solid blue; */
-}
-
-.openCamera {
-    display: block;
-}
-
-.camera video {
-    width: 100vw;
-   border: 2px solid red; 
-    max-height: 100vh;
+    background: black;
 }
 
 .confirmingOutput {
@@ -46,7 +32,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 102;
+    z-index: 105;
     display: none;
 }
 
@@ -58,28 +44,70 @@
 
 .confirmingOutput img {
     height: auto;
-    /* max-width: 100%; */
     max-height: 100vh;
-    /* border: 4px solid green; */
-    /* aspect-ratio: var(--photoAspectRation); */
-
 }
 
-.previewCanvas {
-    border: 2px solid blue;
+.previewCanvas,
+.captureArea {
     position: absolute;
     top: 0%;
-    /* transform: translateY(-50%); */
-    /* height: 100%; */
-    /* height: 766px; */
-    /* width: 766px; */
-    /* height: 400px;; */
-/* width: 400px; */
 }
-@media (max-width: 500px){
-    .previewCanvas{
+.captureAreaContainer {
+    position: absolute;
+    top:0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    pointer-events: none;
+    overflow: hidden;
+}
+
+.captureArea {
+    z-index: 103;
+    transform: translateX(-50%);
+    left: 50%;
+    pointer-events: none;
+}
+
+.captureArea::after {
+    content: "";
+    position: absolute;
+    z-index: 103;
+    top: 0%;
+    left: 100%;
+    width: 100vw;
+    height: 100vh;
+    background: black;
+}
+
+.captureArea::before {
+    content: "";
+    position: absolute;
+    z-index: 103;
+    top: 0%;
+    right: 100%;
+    width: 100vw;
+    height: 100vh;
+    background: black;
+}
+
+@media (max-width: 500px) {
+    .previewCanvas,
+    .captureArea {
         top: 50%;
+        left: 0;
         transform: translateY(-50%);
+    }
+
+    .captureArea::after {
+        left: unset;
+        top: 100%;
+    }
+
+    .captureArea::before {
+        right: unset;
+        transform: rotate(180deg);
+        transform-origin: top;
     }
 }
 
@@ -88,6 +116,7 @@
     left: 50%;
     bottom: 30px;
     transform: translateX(-50%);
+    z-index: 104;
 }
 
 .canvas {
