--- a/src/components/addButton/addButton.module.css
+++ b/src/components/addButton/addButton.module.css
@@ -2,14 +2,15 @@
     position: absolute;
     z-index: 100;
     height: 100%;
-    width: 100%;;
+    width: 100%;
+    ;
     pointer-events: none;
     display: flex;
     justify-content: right;
 }
 
 
-.topBarButtons{
+.topBarButtons {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -21,11 +22,19 @@
 }
 
 .addButton {
-    border: 1px solid red;
     display: inline-block;
-    height: 25px;
+    height: 29px;
+
+    padding: 0 10px;
     position: relative;
     margin-left: auto;
+    background: white;
+   border-radius: 4px; 
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, .1);
+    
+    &.isAdding {
+        margin-top: 40px;;
+    }
 }
 
 .saveButton {
