--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -2,3 +2,8 @@ $black: black;
 $white: white;
 $gold: #F0D878;
 $grey: #3b3b3b;
+$guinness: #0A0406;
+$darkGrey: #181818;
+
+$background: $white;
+$font: $black;
