--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root {
+    --scrollTop: 0px;
     --max-width: 1100px;
     --border-radius: 12px;
     --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -86,6 +87,7 @@ main {
     height: 100vh;
     position: absolute;
     top: 0;
+    overflow: hidden;
 }
 
 body {
@@ -124,7 +126,7 @@ button {
     position: absolute;
     left: 15px;
     top: 40px;
-    z-index: 105;
+    z-index: 99;
 }
 
 .mapboxgl-ctrl-top-left,
