--- a/src/app/review/review.module.scss
+++ b/src/app/review/review.module.scss
@@ -2,6 +2,14 @@
 @use "../../styles/variable.scss" as *;
 
 
+.scrollBuffer {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    bottom: 40%;
+    border: 1px solid red;
+    // scroll-snap-align:end;
+}
 .infoPanel,
 .loading {
     position: absolute;
@@ -9,11 +17,24 @@
     top: 60%;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: black;
-    padding: 10px;
+    height: calc(100% - 30px);
+    background:$background;
+    border-radius: 15px 15px 0 0;
+    padding: 5px 15px 15px 15px;
     min-height: 400px;
     pointer-events: all;
+    color: $font;
+    scroll-snap-align:end;
+    scroll-margin-bottom: 75dvh;
+}
+
+.dragHandle {
+    width: 50px;
+    height: 5px;
+    border-radius: 10px;
+    background: grey;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 .hidden {
@@ -22,7 +43,6 @@
 
 .form {
     height: 100%;
-    ;
     position: relative;
 }
 
@@ -42,15 +62,24 @@
 
     label {
         margin-right: 5px;
+        margin-bottom: 0;
     }
 }
 
 .input {
     @include mixins.input;
+
+    &.comment {
+        @include mixins.textArea;
+    }
 }
 
 .label {
     @include mixins.label;
+
+    &.comment {
+        margin-top: 10px;
+    }
 }
 
 
