--- a/src/components/reviewImage/reviewImageCreator.module.scss
+++ b/src/components/reviewImage/reviewImageCreator.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/mixins.scss";
+
 .camera {
     position: absolute;
     z-index: 101;
@@ -119,6 +121,10 @@
     bottom: 30px;
     transform: translateX(-50%);
     z-index: 104;
+
+    .button {
+        background: white;
+    }
 }
 
 .canvas {
@@ -140,11 +146,21 @@
 
 .button {
     color: black;
-    background: white;
+    background: white ;
     width: 100px;
     height: 20px;
     margin: 0 auto;
     margin-top: 7px;
     margin-bottom: 10px;
     display: block;
+
+    &.takePhoto {
+        // @include mixins.submitButton;
+        background: black;
+        color: white;
+        padding: 0;
+        border-radius: 7px;
+        font-size: 10px;
+        margin-top: 15px;
+    }
 }
