--- a/src/components/reviewsDisplay/reviewsDisplay.module.scss
+++ b/src/components/reviewsDisplay/reviewsDisplay.module.scss
@@ -6,7 +6,7 @@
 }
 
 .displayContainer {
-    color: white;
+    // color: black;
 }
 
 .topbar {
@@ -22,5 +22,7 @@
         width: 100%;
         background: $gold;
         margin-top: 20px;
+        position: fixed;
+        bottom: 10px;
     }
 }
