--- a/src/components/scrollContainer/scrollContainer.module.scss
+++ b/src/components/scrollContainer/scrollContainer.module.scss
@@ -1,10 +1,12 @@
 
 .scrollContainer {
-    height: 100dvh;
+    height: 120dvh;
     position: absolute;
     top: 0;
     left:0;
     width: 100%;
     overflow: scroll;
+    scroll-snap-type: y proximity;
     pointer-events: none;
+    border: 5px solid green;
 }
