--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,14 +1,15 @@
 @use "./variable.scss" as *;
 @mixin input {
     width: 100%;
-    background: black;
+    background:none;
     border-style: none;
     border: 1px solid $grey;
-    // border-radius: 3px;
-    height: 20px;
-    margin-bottom: 5px;
-    padding-left: 5px;
+    border-radius: 5px;
+    height: 24px;
+    margin-bottom: 7px;
+    padding-left: 7px;
     font-size: 12px;
+    color: $font;
 
     &.comment {
         height: 40px;
@@ -25,13 +26,19 @@
 @mixin label {
     display: block;
     margin-bottom: 5px;
-    color: #F0D878;
+    // color: #F0D878;
     font-size: 12px;
+    font-weight: 600;
 }
 
 @mixin submitButton {
     background: white;
-    // border-radius: 2px;
+    border-radius: 15px;
     padding: 10px;
     color: black;
+}
+
+@mixin textArea {
+    @include input;
+    padding-top: 7px;
 }
