--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,14 +79,16 @@
 html,
 body {
     max-width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     overflow-x: hidden;
+    border: 1px solid blue;
 }
 
 main {
     height: 100dvh;
     position: absolute;
     top: 0;
+    border: 1px solid purple;
     /* overflow: hidden; */
 }
 
