--- a/src/app/review/review.module.scss
+++ b/src/app/review/review.module.scss
@@ -7,7 +7,7 @@
     width: 100vw;
     position: absolute;
     bottom: 40%;
-    border: 1px solid red;
+    outline: 1px solid red;
     // scroll-snap-align:end;
 }
 .infoPanel,
