--- a/src/components/scrollContainer/scrollContainer.module.scss
+++ b/src/components/scrollContainer/scrollContainer.module.scss
@@ -8,6 +8,6 @@
     overflow: scroll;
     scroll-snap-type: y proximity;
     pointer-events: none;
-    border: 5px solid green;
+    outline: 5px solid green;
     overscroll-behavior: none;
 }
