--- a/src/components/reviewList/reviewList.module.scss
+++ b/src/components/reviewList/reviewList.module.scss
@@ -3,11 +3,11 @@
 
 .detailsContainer {
     // display: flex;
-    border: 1px solid red;
+    outline: 1px solid red;
     overflow: scroll;
     // overscroll-behavior: contain;
     height: calc(100dvh - var(--scrollTop)) !important;
-    max-height: calc(100vh - 150px);
+    max-height: calc(100dvh - 150px);
     justify-content: space-between;
 }
 
