--- a/src/components/reviewList/reviewList.module.scss
+++ b/src/components/reviewList/reviewList.module.scss
@@ -11,6 +11,7 @@
     height: calc(100dvh - var(--scrollTop)) !important;
     max-height: calc(100dvh - var(--scrollTop));
     justify-content: space-between;
+    pointer-events: none;
 }
 
 .arrow {
