--- a/src/components/scrollContainer/scrollContainer.module.scss
+++ b/src/components/scrollContainer/scrollContainer.module.scss
@@ -11,3 +11,6 @@
     outline: 5px solid green;
     overscroll-behavior: none;
 }
+.scrollContainer:not(:has(:hover)) {
+  pointer-events: none;
+}
