--- a/src/components/reviewImage/reviewImageCreator.module.scss
+++ b/src/components/reviewImage/reviewImageCreator.module.scss
@@ -146,21 +146,21 @@
 
 .button {
     color: black;
-    background: white ;
+    background: white;
     width: 100px;
-    height: 20px;
+    // height: 20px;
     margin: 0 auto;
     margin-top: 7px;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
     display: block;
 
     &.takePhoto {
         // @include mixins.submitButton;
         background: black;
         color: white;
-        padding: 0;
         border-radius: 7px;
-        font-size: 10px;
+        padding: 5px;
+        font-size: 14px;
         margin-top: 15px;
     }
 }
