portal error fix

--- a/src/components/reviewList/reviewList.module.scss
+++ b/src/components/reviewList/reviewList.module.scss
@@ -95,7 +95,8 @@
         display: block;
         // background: #EFF3F6;
         border-radius: 5px;
-        min-height: 50px;
+        margin-bottom: 10px;
+        // min-height: 50px;
         // padding: 0 5px 5px 5px;
         font-size: 12px;
 
