add review to location route. review changed to location route. scoll container css

--- a/src/components/scrollContainer/scrollContainer.module.scss
+++ b/src/components/scrollContainer/scrollContainer.module.scss
@@ -11,6 +11,6 @@
     outline: 5px solid green;
     overscroll-behavior: none;
 }
-.scrollContainer:not(:has(:hover)) {
+.scrollContainer:not(:has(:focus)) {
   pointer-events: none;
 }
