--- a/src/app/location/review.module.scss
+++ b/src/app/location/review.module.scss
@@ -23,7 +23,7 @@
     border-radius: 15px 15px 0 0;
     padding: 5px 15px 15px 15px;
     min-height: 400px;
-    pointer-events: all;
+    pointer-events: auto;
     color: $font;
     scroll-snap-align: end;
     scroll-margin-bottom: 75dvh;
