--- a/src/components/scrollContainer/scrollContainer.module.scss
+++ b/src/components/scrollContainer/scrollContainer.module.scss
@@ -5,12 +5,13 @@
     top: 0;
     left:0;
     width: 100%;
-    overflow: scroll;
-    scroll-snap-type: y proximity;
+    // overflow: scroll;
+    overflow: hidden;
+    // scroll-snap-type: y proximity;
     pointer-events: none;
     outline: 5px solid green;
     overscroll-behavior: none;
 }
-.scrollContainer:not(:has(:active)) {
+.scrollContainer:not(:has(:hover)) {
   // pointer-events: none;
 }
