top snap behaviour

--- a/src/components/scrollContainer/scrollContainer.module.scss
+++ b/src/components/scrollContainer/scrollContainer.module.scss
@@ -5,8 +5,8 @@
     top: 0;
     left:0;
     width: 100%;
-    // overflow: scroll;
-    overflow: hidden;
+    overflow: scroll;
+    // overflow: hidden;
     // scroll-snap-type: y proximity;
     pointer-events: none;
     outline: 5px solid green;
