details container resize behaviour

--- a/src/app/location/review.module.scss
+++ b/src/app/location/review.module.scss
@@ -37,6 +37,7 @@
     min-height: 400px;
     pointer-events: auto;
     color: $font;
+    // overflow: scroll;
     // scroll-snap-align: end;
     // scroll-margin-bottom: 75dvh;
     // animation-name: none;
