--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root {
-    --scrollTop: 0px;
+    --scrollTop: 60dvh;
     --scroll: 60%;
     --max-width: 1100px;
     --border-radius: 12px;
