--- a/src/components/reviewList/reviewList.module.scss
+++ b/src/components/reviewList/reviewList.module.scss
@@ -8,10 +8,11 @@
     outline: 1px solid red;
     overflow: scroll;
     // overscroll-behavior: contain;
-    height: calc(100dvh - var(--scrollTop)) !important;
+    height: calc(100dvh - var(--scrollTop)) ;
     max-height: calc(100dvh - var(--scrollTop));
     justify-content: space-between;
     pointer-events: auto !important;
+    // transition: all 0.4s;
 }
 
 .arrow {
