--- a/src/components/reviewsDisplay/reviewsDisplay.module.scss
+++ b/src/components/reviewsDisplay/reviewsDisplay.module.scss
@@ -25,7 +25,7 @@
         width: 93%;
         background: $gold;
         margin-top: 20px;
-        position: fixed;
+        position: absolute;
         left: 50%;
         transform: translateX(-50%);
         bottom: 10px;
