--- a/src/app/location/review.module.scss
+++ b/src/app/location/review.module.scss
@@ -35,7 +35,7 @@
     border-radius: 15px 15px 0 0;
     padding: 5px 15px 15px 15px;
     min-height: 400px;
-    pointer-events: auto;
+    pointer-events: none;
     color: $font;
     // overflow: scroll;
     // scroll-snap-align: end;
