--- a/src/components/map/map.module.css
+++ b/src/components/map/map.module.css
@@ -1,17 +1,35 @@
 .mapContainer {
-    height: 100%;
+  height: 100%;
+
+  .mapboxgl-marker {
+    border: 1px solid red;
+  }
 }
 
 .map {
-    height: 100%;
+  height: 100%;
 
-    .mapboxgl-compact {
-        display: none;;
-    }
-    
+  .mapboxgl-compact {
+    display: none;
+  }
 }
 
 .guinnessMarker {
-    height: 50px;
-    transform: translateY(-22px);
-   }
+  height: 50px;
+  width: auto;
+  transform: translateY(-22px);
+}
+
+.price {
+  color: white;
+  width: 100px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  position: absolute;
+  left: 50%;
+  top: -35px;
+  transform: translateX(-50%);
+  /* text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black; */
+  -webkit-text-stroke: 1.5px black;
+}
