--- a/src/components/priceRange/priceRange.module.scss
+++ b/src/components/priceRange/priceRange.module.scss
@@ -2,11 +2,17 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin-top: 5px;
+    padding-bottom: 10px;
+
+    label {
+        margin-bottom: 10px;
+    }
 }
 
 .slidersControl {
     position: relative;
-    min-height: 50px;
+    min-height: 15px;
 
     .sliderInput {
         -webkit-appearance: none;
@@ -58,17 +64,10 @@
         }
     }
 
-    input[type="number"] {
-        color: #8a8383;
-        width: 50px;
-        height: 30px;
-        font-size: 20px;
-        border: none;
-    }
 
     input[type=number]::-webkit-inner-spin-button,
     input[type=number]::-webkit-outer-spin-button {
-        opacity: 1;
+        // opacity: 1;
     }
 }
 
@@ -76,6 +75,32 @@
     position: relative;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: 13px;
     color: #635a5a;
+
+    label {
+        display: block;
+        margin-bottom: 0px;
+    }
+
+    span {
+        font-size: 16px;
+    }
+
+    input[type="number"] {
+        // color: white;
+        color: black;
+        background: white;
+        width: 44px;
+        height: 30px;
+        font-size: 16px;
+        border: none;
+        padding-left: 5px;
+        padding-right: 3px;
+    }
+
+    button {
+        margin-top: 20px;
+    }
 }
