--- a/src/components/reviewsDisplay/reviewsDisplay.module.scss
+++ b/src/components/reviewsDisplay/reviewsDisplay.module.scss
@@ -7,7 +7,8 @@
 
 .displayContainer {
     // color: black;
-    pointer-events: all;;
+    pointer-events: all;
+    ;
     position: absolute;
     top: 15px;
     bottom: 10px;
@@ -24,13 +25,18 @@
     @include mixins.submitButton;
 
     &.add {
-        // width: 100%;
-        width: 50px;
-        height: 50px;
+        display: flex;
+        align-items: center;
+        // width: 50px;
         background: $gold;
         margin-top: 20px;
         position: fixed;
         bottom: 10px;
         right: 0;
+        padding-left: 20px;
+
+        img {
+            width: auto;
+        }
     }
 }
