--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,9 +1,11 @@
 @use "../../styles/mixins.scss" as *;
+@use "../../styles/variable.scss" as *;
 
 .addButtonContainer {
     position: absolute;
     z-index: 100;
-    height: 100%;
+    // height: 100%;
+    bottom: 5px;
     width: 100%;
     pointer-events: none;
     display: flex;
@@ -13,7 +15,8 @@
 
 .topBarButtons {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+    align-items: flex-end;
     width: 100%;
     padding: 5px;
 }
@@ -28,14 +31,51 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 14px;
+    height: 100px;
+    width: 100px;
+    font-size: 40px;
     z-index: 105;
+    border-radius: 50%;
+    padding-right: 5px;
+    cursor: pointer;
+    // background-color: $gold;
+    // border: 1px solid black;
 
-    &.settings {
-        padding: 5px;
+    box-shadow: 7px 5px 15px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 3px 3px 6px;
+
+    // box-shadow: rgba(255, 255, 255, 0.1) 1px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 25px 50px 50px -20px, rgba(0, 0, 0, 0.3) 15px 10px 50px -30px;
+
+    img {
+        height: 40px;
+        width: auto;
+        margin-left: -5px;
     }
 
+
     &.isAdding {
-        margin-top: 40px;
+        display: none;
+        // margin-top: 40px;
+        // @include uiButton;
+        // font-size: 16px;
+    }
+}
+
+.settings {
+    @include uiButton;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 3px 3px 6px;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-right: 5px;
+
+    img {
+        height: 25px;
+        width: auto;
     }
 }
