--- a/src/components/settingsDropdown/settingsDropdown.module.scss
+++ b/src/components/settingsDropdown/settingsDropdown.module.scss
@@ -3,9 +3,10 @@
 .settingsDropdown {
     pointer-events: all;
     @include uiButton;
+
+    border-radius: 15px;
     position: absolute;
-    left: 5px;
-    top: 40px;
+    right: 160px;
     height: fit-content;
     width: 200px;
     font-size: 13px;
@@ -44,7 +45,6 @@
         padding: 10px 0;
     }
 
-    @include uiButton;
     position: absolute;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -52,13 +52,14 @@
     user-select: none;
     height: auto;
 
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+    rgba(0, 0, 0, 0.23) 3px 3px 6px;
+
     li {
         min-height: 29px;
         font-size: 13px;
         display: flex;
-        // align-items: center;
         justify-content: space-between;
-
 
         // checkbox
         input[type="checkbox"] {
@@ -69,10 +70,22 @@
             cursor: pointer;
             height: 20px;
             width: 20px;
-            pointer-events: all;
+        }
+
+        input[type="checkbox"]:focus {
+            &~.checkmark::before {
+                // ~ general sibling combinator select siblings after the input element
+                opacity: 1;
+                border: 1px solid black;
+            }
+        }
+
+        input[type="checkbox"]:checked+.checkmark img {
+            opacity: 1;
         }
 
         .checkmark {
+            // opacity: 0;
             position: absolute;
             right: 10px;
             height: 15px;
@@ -85,13 +98,39 @@
             border: 1px solid grey;
 
             img {
+                opacity: 0;
                 height: 12px;
                 width: 12px;
             }
+
+            &::before {
+                content: "";
+                position: absolute;
+                width: 150%;
+                height: 150%;
+                left: -32%;
+                top: -25%;
+                opacity: 0;
+            }
         }
 
-        input:checked~.checkmark {
-            // background: blue;
-        }
     }
+
+    transform: scale(0);
+    opacity: 0;
+    transform-origin:bottom right;
+    transition: all 0.25s ease;
+    pointer-events: none;
+    display: none;
+
+    &.show {
+        display: block;
+        opacity: 1;
+        transform: scale(1);
+        pointer-events: all;
+    }
+}
+
+.settingsDropdown ul li input[type=checkbox]:focus+.recentPriceLabel {
+    border: 1px solid red;
 }
