--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -4,9 +4,9 @@
 .addButtonContainer {
     position: absolute;
     z-index: 100;
-    // height: 100%;
     bottom: 5px;
     width: 100%;
+    height: 100%;
     pointer-events: none;
     display: flex;
     justify-content: right;
@@ -18,6 +18,7 @@
     justify-content: flex-end;
     align-items: flex-end;
     width: 100%;
+    height: 100%;
     padding: 5px;
 }
 
@@ -38,13 +39,9 @@
     border-radius: 50%;
     padding-right: 5px;
     cursor: pointer;
-    // background-color: $gold;
-    // border: 1px solid black;
 
-    box-shadow: 7px 5px 15px 5px rgba(0, 0, 0, 0.2);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 3px 3px 6px;
 
-    // box-shadow: rgba(255, 255, 255, 0.1) 1px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 25px 50px 50px -20px, rgba(0, 0, 0, 0.3) 15px 10px 50px -30px;
 
     img {
         height: 40px;
@@ -55,9 +52,7 @@
 
     &.isAdding {
         display: none;
-        // margin-top: 40px;
-        // @include uiButton;
-        // font-size: 16px;
+
     }
 }
 
@@ -78,4 +73,16 @@
         height: 25px;
         width: auto;
     }
+}
+
+.welcomePopupButton {
+    @include uiButton;
+    cursor: pointer;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    font-size: 20px;
 }
