--- a/src/components/settingsDropdown/settingsDropdown.module.scss
+++ b/src/components/settingsDropdown/settingsDropdown.module.scss
@@ -121,10 +121,12 @@
     transform-origin:bottom right;
     transition: all 0.25s ease;
     pointer-events: none;
-    display: none;
+    // display: none;
+    visibility: hidden;
 
     &.show {
-        display: block;
+        // display: block;
+        visibility: visible;
         opacity: 1;
         transform: scale(1);
         pointer-events: all;
