desktop file upload

--- a/src/components/reviewImage/reviewImageCreator.module.scss
+++ b/src/components/reviewImage/reviewImageCreator.module.scss
@@ -1,5 +1,11 @@
 @use "../../styles/mixins.scss";
 
+.imageCreator {
+    @media(min-width: 1000px) {
+        display: none;
+    }
+}
+
 .camera {
     position: absolute;
     z-index: 101;
