--- a/src/components/reviewsDisplay/reviewsDisplay.module.scss
+++ b/src/components/reviewsDisplay/reviewsDisplay.module.scss
@@ -8,7 +8,6 @@
 .displayContainer {
     // color: black;
     pointer-events: all;
-    ;
     position: absolute;
     top: 15px;
     bottom: 10px;
@@ -19,6 +18,18 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
+
+    @media(min-width: 1000px) {
+
+        .close {
+            img {
+                height: 25px;
+                width: auto;
+                position: relative;
+                bottom: 5px;
+            }
+        }
+    }
 }
 
 .button {
