map controls border-radius

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,10 +137,7 @@ button {
   }
 }
 
-.mapboxgl-control-container {
-  display: none;
-}
-
+/* center on user button*/
 .mapboxgl-control-container {
   display: block;
   position: absolute;
@@ -150,22 +147,26 @@ button {
   height: 40px;
   width: 40px;
 
+  border-radius: 50%;
+
   .mapboxgl-ctrl-group:not(:empty) {
     box-shadow:
       rgba(0, 0, 0, 0.16) 0px 3px 6px,
       rgba(0, 0, 0, 0.23) 3px 3px 6px;
+    border-radius: 50%;
+  }
+
+  & * {
+    border-radius: 50%;
+    height: 40px !important;
+    width: 40px !important;
   }
 
   .mapboxgl-ctrl {
-    border-radius: 50%;
-
     .mapboxgl-ctrl-geolocate {
       border-radius: 50%;
-      height: 40px;
-      width: 40px;
 
       .mapboxgl-ctrl-icon {
-        border-radius: 50%;
       }
     }
   }
