motion state popup

--- a/src/components/userMarker/userMarker.module.css
+++ b/src/components/userMarker/userMarker.module.css
@@ -1,7 +1,17 @@
 .userMarker {
-    height: 30px;
+  height: 30px;
 }
 
-.userMarker>img {
-    height: 100%;
+.userMarker > img {
+  height: 100%;
+}
+
+.motion {
+  position: absolute;
+  border: 1px solid red;
+  height: 20px;
+  min-width: fit-content;
+  width: 300px;
+  display: flex;
+  top: -20px;
 }
