--- a/src/app/(auth)/auth.module.scss
+++ b/src/app/(auth)/auth.module.scss
@@ -2,65 +2,95 @@
 @use "../../styles/mixins.scss" as *;
 
 .pageContainer {
+  position: absolute;
+  z-index: 102;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background: var(--bg);
+  background-color: white;
+
+  .close {
+    cursor: pointer;
     position: absolute;
-    z-index: 102;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // background: var(--bg);
-    background-color: white;
+    top: 5px;
+    right: 0px;
 
-    .close {
-        position: absolute;
-        top: 5px;
-        right: 0px;
-
-        .x {
-            height: auto;
-        }
+    .x {
+      height: auto;
     }
+  }
 
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
 
-    button[type="submit"] {
-        background-color: $gold;
-        border-radius: 40px;
-        height: 30px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+  button[type="submit"] {
+    cursor: pointer;
+    background-color: $gold;
+    border-radius: 40px;
+    height: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  a {
+    text-decoration: underline;
+
+    &.password {
+      margin: 0 auto;
+      margin-top: 10px;
+      opacity: 0.5;
     }
+  }
 
-    a {
-        text-decoration: underline;
+  label {
+    @include label;
+  }
+
+  input {
+    @include input;
+  }
+
+  p.error {
+    font-size: 12px;
+    color: red;
+    margin-bottom: 5px;
+  }
+
+  p.instruction {
+    margin-bottom: 40px;
+  }
+
+  p.back {
+    text-decoration: underline;
+    cursor: pointer;
+    margin: 0 auto;
+
+    &.fade {
+      opacity: 0.5;
+      margin-top: 20px;
     }
+  }
 
-    input {
-        @include input;
-    }
+  h1 {
+    margin-bottom: 10px;
+  }
 
-    p.error {
-        font-size: 12px;
-        color: red;
-        margin-bottom: 5px;
-
-    }
-
-    p[role="status"] {
-        font-style: italic;
-        font-weight: 400;
-        width: fit-content;
-        position: absolute;
-        bottom: -30px;
-        left: 50%;
-        transform: translateX(-50%);
-    }
+  p[role="status"] {
+    font-style: italic;
+    font-weight: 400;
+    width: fit-content;
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
